@@ -1,26 +1,28 @@
 package com.meli.notifier.forecast.domain.service.impl;
 
-import com.meli.notifier.forecast.adapter.out.messaging.integration.client.CptecFeignClient;
-import com.meli.notifier.forecast.adapter.out.messaging.integration.model.wave.WaveForecastResponseDTO;
-import com.meli.notifier.forecast.adapter.out.messaging.integration.model.weather.ForecastResponseDTO;
-import com.meli.notifier.forecast.application.mapper.ForecastMapper;
+import com.meli.notifier.forecast.adapter.out.integration.client.CptecFeignClient;
+import com.meli.notifier.forecast.adapter.out.integration.model.wave.WaveForecastResponseDTO;
+import com.meli.notifier.forecast.adapter.out.integration.model.weather.ForecastResponseDTO;
+import com.meli.notifier.forecast.domain.exception.BadRequestException;
 import com.meli.notifier.forecast.domain.exception.ServiceUnavailableException;
 import com.meli.notifier.forecast.domain.mapper.CityMapper;
+import com.meli.notifier.forecast.domain.mapper.ForecastMapper;
 import com.meli.notifier.forecast.domain.model.database.City;
 import com.meli.notifier.forecast.domain.model.forecast.CombinedForecastDTO;
 import com.meli.notifier.forecast.domain.service.CityService;
+import com.meli.notifier.forecast.domain.service.CoastalCityService;
 import com.meli.notifier.forecast.domain.service.CptecService;
 import feign.FeignException;
 import io.github.resilience4j.retry.annotation.Retry;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.cache.annotation.Cacheable;
+import org.springframework.data.redis.core.RedisTemplate;
 import org.springframework.stereotype.Service;
-import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.Optional;
-import java.util.stream.Collectors;
+
+import static org.apache.commons.lang3.ObjectUtils.isEmpty;
 
 @Service
 @Slf4j
@@ -28,42 +30,82 @@ import java.util.stream.Collectors;
 public class CptecServiceImpl implements CptecService {
 
     private final CptecFeignClient cptecClient;
+    private final CoastalCityService coastalCityService;
     private final CityService cityService;
     private final CityMapper cityMapper;
     private final ForecastMapper forecastMapper;
+    private final RedisTemplate<String, String> redisTemplate;
 
-    @Override
     @Cacheable(value = "citiesCache", key = "#cityName")
     @Retry(name = "cptecRetry")
+    @Override
     public List<City> findCities(String cityName) {
         try {
-            var response = cptecClient.findCities(cityName);
+            var citiesFromDb = cityService.findCities(cityName);
+            var cityNameFoundInList = citiesFromDb.stream().anyMatch(c -> c.getName().equalsIgnoreCase(cityName));
 
-            if (response == null || response.getCities() == null) {
-                log.warn("No cities found for search term: {}", cityName);
+            if (!citiesFromDb.isEmpty() && cityNameFoundInList) {
+                log.info("Cities found in database for name: {}", cityName);
+                return citiesFromDb;
+            }
+
+            var response = cptecClient.findCities(cityName);
+            if (response == null || isEmpty(response.getCities())) {
+                log.warn("No cities found in CPTEC API for city name: {}", cityName);
                 return List.of();
             }
 
             return response.getCities().stream()
                     .map(cityMapper::toModel)
-                    .collect(Collectors.toList());
+                    .toList();
         } catch (FeignException e) {
-            throw cptecApiError("Error calling CPTEC API for forecast: {}", e);
+            throw handleCptecApiError("Error searching cities", e);
         }
     }
 
-    @Override
     @Cacheable(value = "weatherCache", key = "#cityId")
-//    @Retry(name = "cptecRetry", fallbackMethod = "getForecastFallback")
+    @Retry(name = "cptecRetry")
+    @Override
     public CombinedForecastDTO getCombinedForecast(Long cityId) {
-        ForecastResponseDTO weatherResponse = getForecast(cityId);
-        int today = 0;
+        try {
+            ForecastResponseDTO weatherResponse = getWeatherForecast(cityId);
+            WaveForecastResponseDTO waveForecast = getWaveForecastIfCoastal(cityId);
 
-        WaveForecastResponseDTO waveForecast = null;
-        if (isCityCoastal(cityId)) {
-            waveForecast = getWaveForecast(cityId, today);
+            return buildCombinedForecast(weatherResponse, waveForecast);
+        } catch (FeignException e) {
+            throw handleCptecApiError("Error getting combined forecast", e);
+        }
+    }
+
+    @Cacheable(value = "weatherCache", key = "'weather:' + #cityId")
+    @Override
+    public ForecastResponseDTO getWeatherForecast(Long cityId) {
+        try {
+            return cptecClient.getForecast(cityId);
+        } catch (FeignException e) {
+            throw handleCptecApiError("Error getting weather forecast", e);
+        }
+    }
+
+    @Cacheable(value = "waveForecastCache", key = "'wave:' + #cityId + ':' + #day")
+    @Override
+    public WaveForecastResponseDTO getWaveForecast(Long cityId, int day) {
+        if (day < 0 || day > 3) {
+            throw new BadRequestException("Day must be between 0 and 3");
         }
 
+        try {
+            return cptecClient.getWaveForecast(cityId, day);
+        } catch (FeignException e) {
+            throw handleCptecApiError("Error getting wave forecast", e);
+        }
+    }
+
+    private WaveForecastResponseDTO getWaveForecastIfCoastal(Long cityId) {
+        return coastalCityService.isCityCoastal(cityId) ? getWaveForecast(cityId, 0) : null;
+    }
+
+    private CombinedForecastDTO buildCombinedForecast(ForecastResponseDTO weatherResponse, WaveForecastResponseDTO waveForecast) {
         return CombinedForecastDTO.builder()
                 .cityName(weatherResponse.getName())
                 .stateCode(weatherResponse.getStateCode())
@@ -72,52 +114,8 @@ public class CptecServiceImpl implements CptecService {
                 .build();
     }
 
-    @Cacheable(value = "weatherCache", key = "'weather:' + #cityId")
-    public ForecastResponseDTO getForecast(Long cityId) {
-        try {
-            return cptecClient.getForecast(cityId);
-        } catch (FeignException e) {
-            throw cptecApiError("Error calling CPTEC API for forecast: {}", e);
-        }
-    }
-
-    @Cacheable(value = "waveForecastCache", key = "'wave:' + #cityId + ':' + #day")
-    public WaveForecastResponseDTO getWaveForecast(Long cityId, int day) {
-        try {
-            return cptecClient.getWaveForecast(cityId, day);
-        } catch (FeignException e) {
-            throw cptecApiError("Error calling CPTEC API for forecast: {}", e);
-        }
-    }
-
-    private static ServiceUnavailableException cptecApiError(String format, FeignException e) {
-        log.error(format, e.getMessage());
+    private ServiceUnavailableException handleCptecApiError(String message, FeignException e) {
+        log.error("{}: {}", message, e.getMessage());
         return new ServiceUnavailableException("CPTEC API is currently unavailable");
-    }
-
-    @Transactional
-    public Boolean isCityCoastal(Long cityId) {
-        Optional<City> cityOpt = cityService.findById(cityId);
-
-        if (cityOpt.isPresent() && cityOpt.get().getIsCoastal() != null) {
-            var city = cityOpt.get();
-            return city.getIsCoastal();
-        }
-
-        City city = cityOpt.get();
-
-        var waveForecast = getWaveForecast(cityId, 0);
-
-        if (waveForecast == null || waveForecast.getName().equalsIgnoreCase("undefined")) {
-            log.warn("City with id: {} is not coastal", cityId);
-            city.setIsCoastal(false);
-            cityService.saveCity(city);
-            return false;
-        }
-
-        log.info("City {} with id: {} is coastal", waveForecast.getName(), cityId);
-        city.setIsCoastal(true);
-        cityService.saveCity(cityId);
-        return true;
     }
 }
